# nanet_client_ros

./: README.md  ros_natnet_client.md
ros_natnet_client/: CMakeLists.txt  README.md  package.xml
ros_natnet_client/include/: Mocap.h
ros_natnet_client/include/NatNet/: NatNetClient.h
ros_natnet_client/launch/: asl_optitrack_vr.launch
ros_natnet_client/src/: Mocap.cc  ros_natnet_client.cpp
